--- a/addons/analytic/views/analytic_account_views.xml
+++ b/addons/analytic/views/analytic_account_views.xml
@@ -90,6 +90,26 @@
             </field>
         </record>
 
+        <record id="account_analytic_distribution_model_form_view" model="ir.ui.view">
+            <field name="name">account.analytic.distribution.model.form</field>
+            <field name="model">account.analytic.distribution.model</field>
+            <field name="arch" type="xml">
+                <form string="Analytic Distribution Model">
+                    <sheet>
+                        <group>
+                            <field name="name"/>
+                            <field name="distribution_tag_ids">
+                                <tree editable="bottom">
+                                    <field name="analytic_account_id"/>
+                                    <field name="percentage"/>
+                                </tree>
+                            </field>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
         <record id="account_analytic_group_tree_view" model="ir.ui.view">
             <field name="name">account.analytic.group.tree</field>
             <field name="model">account.analytic.group</field>
