[IMP] *: use many2one for language field instead of selection
Replace selectiong field for language by a many2one.
Remove the counter on languages in different model.

task-2856992

--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -125,10 +125,8 @@
                                     <field name="country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
                                 </div>
                                 <field name="website" widget="url" placeholder="e.g. https://www.odoo.com"/>
-                                <field name="lang_active_count" invisible="1"/>
                                 <field name="lang_code" invisible="1"/>
-                                <field name="lang_id" attrs="{'invisible': [('lang_active_count', '&lt;=', 1)]}"
-                                    options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
+                                <field name="lang_id" options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
                             </group>
 
                             <group name="opportunity_partner" attrs="{'invisible': [('type', '=', 'lead')]}">
@@ -296,9 +294,7 @@
                                             <field name="country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
                                         </div>
                                         <field name="website" widget="url" placeholder="e.g. https://www.odoo.com"/>
-                                        <field name="lang_active_count" invisible="1"/>
-                                        <field name="lang_id" attrs="{'invisible': [('lang_active_count', '&lt;=', 1)]}"
-                                            options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
+                                        <field name="lang_id" options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
                                     </group>
                                     <group class="mt48">
                                         <label for="contact_name_page_lead"/>
