--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -131,7 +131,8 @@
                                             <field name="bank_account_id" context="{'default_partner_id': address_home_id}"/>
                                         </group>
                                         <group col="4" colspan="2">
-                                        <field name="lang" string="Language"/>
+                                        <field name="lang_id" string="Language"
+                                            options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
                                         <label for="km_home_work" />
                                         <div class="o_row" name="div_km_home_work">
                                             <field name="km_home_work" groups="hr.group_hr_user"/>
