--- a/addons/mail/wizard/mail_template_preview_views.xml
+++ b/addons/mail/wizard/mail_template_preview_views.xml
@@ -24,7 +24,7 @@
                         <div class="row">
                             <span class="col-md-5 col-lg-4 col-sm-12 ps-0">Force a language: </span>
                             <div class="col-md-7 col-lg-6 col-sm-12 ps-0">
-                                <field name="lang"/>
+                                <field name="lang_id" options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
                             </div>
                         </div>
                     </div>
