--- a/odoo/addons/base/views/res_partner_views.xml
+++ b/odoo/addons/base/views/res_partner_views.xml
@@ -220,8 +220,9 @@
                             <field name="website" string="Website" widget="url" placeholder="e.g. https://www.odoo.com"/>
                             <field name="title" options='{"no_open": True}' placeholder="e.g. Mister"
                                 attrs="{'invisible': [('is_company', '=', True)]}"/>
-                            <field name="active_lang_count" invisible="1"/>
-                            <field name="lang" attrs="{'invisible': [('active_lang_count', '&lt;=', 1)]}"/>
+                            <field name="lang" invisible="True"/>
+                            <field name="lang_id" options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"
+                                context="{'active_test': False, 'lang_uninstalled': True}"/>
                             <field name="category_id" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"
                                    placeholder='e.g. "B2B", "VIP", "Consulting", ...'/>
                         </group>
@@ -229,7 +230,7 @@
 
                     <notebook colspan="4">
                         <page string="Contacts &amp; Addresses" name="contact_addresses" autofocus="autofocus">
-                            <field name="child_ids" mode="kanban" context="{'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_lang': lang, 'default_user_id': user_id, 'default_type': 'other'}">
+                            <field name="child_ids" mode="kanban" context="{'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_lang_id': lang_id, 'default_user_id': user_id, 'default_type': 'other'}">
                                 <kanban>
                                     <field name="id"/>
                                     <field name="color"/>
@@ -251,6 +252,7 @@
                                     <field name="image_128"/>
                                     <field name="avatar_128"/>
                                     <field name="lang"/>
+                                    <field name="lang_id"/>
                                     <!-- fields in form x2many view to diminish requests -->
                                     <field name="comment"/>
                                     <field name="display_name"/>
@@ -332,6 +334,7 @@
                                             <field name="comment" placeholder="Internal notes..." nolabel="1"/>
                                         </group>
                                         <field name="lang" invisible="True"/>
+                                        <field name="lang_id" invisible="True"/>
                                         <field name="user_id" invisible="True"/>
                                     </sheet>
                                 </form>
@@ -392,7 +395,8 @@
                                 <field name="phone" widget="phone" options="{'enable_sms': false}"/>
                                 <field name="mobile" widget="phone" options="{'enable_sms': false}"/>
                                 <field name="email"/>
-                                <field name="lang"/>
+                                <field name="lang" invisible="True"/>
+                                <field name="lang_id"/>
                             </group>
                         </group>
                         <group string="Bank Accounts">
