--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -1374,8 +1374,17 @@
             <field name="name">project.task.kanban</field>
             <field name="model">project.task</field>
             <field name="arch" type="xml">
-                <kanban default_group_by="stage_id" class="o_kanban_small_column o_kanban_project_tasks" on_create="quick_create"
-                    quick_create_view="project.quick_create_task_form" examples="project" js_class="project_task_kanban" sample="1">
+                <kanban
+                    default_group_by="stage_id"
+                    class="o_kanban_small_column o_kanban_project_tasks"
+                    on_create="quick_create"
+                    quick_create_view="project.quick_create_task_form"
+                    examples="project"
+                    group_create="project.project_group_project_manager"
+                    group_edit="project.project_group_project_manager"
+                    group_delete="project.project_group_project_manager"
+                    js_class="project_task_kanban" sample="1"
+                >
                     <field name="color"/>
                     <field name="priority"/>
                     <field name="stage_id" options='{"group_by_tooltip": {"description": "Description"}}'/>
