--- a/addons/analytic/static/src/js/analytic_o2m/analytic_o2m.scss
+++ b/addons/analytic/static/src/js/analytic_o2m/analytic_o2m.scss
@@ -6,8 +6,8 @@
         max-width: 200px;
     }
     .o_analytic_account_name {
-        width: 100px;
-        max-width: 100px;
+        width: 180px !important;
+        max-width: 180px !important;
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -20,6 +20,6 @@
 .o_dropdown_bold {
     text-indent: -6px;
     .dropdown-item {
-        font-weight: $font-weight-bold !important;
+        font-weight: $font-weight-bolder !important;
     }
 }
