--- a/addons/analytic/static/src/js/analytic_o2m/analytic_o2m.scss
+++ b/addons/analytic/static/src/js/analytic_o2m/analytic_o2m.scss
@@ -3,6 +3,12 @@
     .analytic_o2m_editor_popup {
         width: 260px;
 
+        .popover-header {
+            .btn-outline-primary {
+                border: none;
+            }
+        }
+
         .o_analytic_account_name {
             width: 180px !important;
             max-width: 180px !important;
