--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -879,7 +879,7 @@
                                                widget="many2many_tags"/> -->
                                         <field name="analytic_dist_tag_ids"
                                                mode="tree"
-                                               widget="analytic_o2m"
+                                               widget="analytic_editor"
                                                string="Analytic Distribution"
                                                options="{'template_field': 'analytic_dist_model_selector_id', 'search_field': 'analytic_account_selector_id'}">
                                                <!-- trying to use list renderer in the popup requires an arch but this doesn't work and we don't want to have to specify it every time
