--- a/addons/analytic/static/src/js/analytic_editor/analytic_editor.scss
+++ b/addons/analytic/static/src/js/analytic_editor/analytic_editor.scss
@@ -2,6 +2,13 @@
 
     .analytic_o2m_editor_popup {
         width: 260px;
+
+        .o_analytic_account_name {
+            width: 180px !important;
+        }
+        .o_analytic_percentage {
+            width: 40px;
+        }
     }
 
 }
