--- a/odoo/addons/test_new_api/views/test_new_api_views.xml
+++ b/odoo/addons/test_new_api/views/test_new_api_views.xml
@@ -214,6 +214,7 @@
                             <field name="name"/>
                             <field name="author"/>
                             <field name="size"/>
+                            <field name="custom_properties"/>
                         </group>
                         <label for="body"/>
                         <field name="body"/>
