--- a/addons/analytic/static/src/js/analytic_json/analytic_json.scss
+++ b/addons/analytic/static/src/js/analytic_json/analytic_json.scss
@@ -4,10 +4,10 @@
         width: 260px;
 
         .o_analytic_account_name {
-            width: 180px !important;
+            width: 70% !important;
         }
         .o_analytic_percentage {
-            width: 40px;
+            width: 22% !important;
         }
     }
 
