wip - use many distribution lists inside each group (instead of a flat list as before). This ensures the TagsList keeps distributions from the same plan together. More importantly, we randomize the plan applicability and check if the distribution is valid based on the random applicability. Unfortunately the validity is only checked when the dropdown is closed - it should check the validity even though the widget is never focused

--- a/addons/analytic/static/src/js/analytic_json/analytic_json.scss
+++ b/addons/analytic/static/src/js/analytic_json/analytic_json.scss
@@ -9,6 +9,24 @@
         .o_analytic_percentage {
             width: 22% !important;
         }
+        .o_analytic_status_red {
+            background-color: $o-danger;
+        }
+        .o_analytic_status_green {
+            background-color: $o-success;
+        }
+        .o_analytic_status_orange {
+            background-color: $o-warning;
+        }
     }
 
+}
+.o_field_analytic_json {
+    &.o_field_invalid {
+        border-bottom: 3px solid $o-danger;
+
+        .o_tag {
+            border: 1px solid $o-danger !important;
+        }
+    }
 }
