[REF] project: convert project right side panel in OWL

--- a/addons/project/static/src/project_right_side_panel/project_right_side_panel.scss
+++ b/addons/project/static/src/project_right_side_panel/project_right_side_panel.scss
@@ -1,4 +1,3 @@
-// ------- View with rightpanel -------
 $o-rightpanel-p: $o-horizontal-padding;
 $o-rightpanel-p-small: $o-horizontal-padding*0.5;
 $o-rightpanel-p-tiny: $o-rightpanel-p-small*0.5;
@@ -6,20 +5,26 @@ $o-rightpanel-p-tiny: $o-rightpanel-p-small*0.5;
 $o-rightpanel-category-default-color: $o-brand-primary;
 $o-rightpanel-filter-default-color: #D59244;
 
-.o_controller_with_rightpanel {
+.o_controller_with_rightpanel .o_content {
+    overflow: hidden;
     display: flex;
-    align-items: flex-start;
+    justify-content: space-between;
 
-    .o_renderer_with_rightpanel {
+    .o_renderer {
         flex: 1 1 100%;
-        overflow: auto; // make the renderer and search panel scroll individually
+        overflow-x: hidden;
+        overflow-y: auto; // make the renderer and search panel scroll individually
         max-height: 100%;
         position: relative;
-    }
-}
+        padding: 0;
 
-html .o_web_client > .o_action_manager > .o_action > .o_content > .o_controller_with_rightpanel {
-    overflow: hidden;
+        .o_kanban_record {
+            width: 100%;
+            margin: 0;
+            border-top: 0;
+            border-right: 0;
+        }
+    }
 }
 
 .o_rightpanel {
@@ -113,7 +118,7 @@ html .o_web_client > .o_action_manager > .o_action > .o_content > .o_controller_
                 align-items: center;
             }
 
-            .o_open_milestone {
+            .o_rightpanel_milestone {
                 margin-bottom: $o-rightpanel-p-small;
                 display: flex;
                 &.o_milestone_danger {
