--- a/odoo/addons/base/static/src/scss/res_partner.scss
+++ b/odoo/addons/base/static/src/scss/res_partner.scss
@@ -27,3 +27,11 @@
     }
 
 }
+
+.o_preview_res_lang {
+    border: 3px solid #C9C6C6;
+    width: auto;
+    padding: 10px 20px 10px;
+    margin-top: 15px;
+    color: #C9C6C6;
+}
