Remove redundant views and links, part1

--- a/addons/l10n_fr_pos_cert/views/account_views.xml
+++ b/addons/l10n_fr_pos_cert/views/account_views.xml
@@ -1,5 +1,6 @@
 <odoo>
-    <record id="view_bank_statement_form_readonly" model="ir.ui.view">
+<!--    FIXME:POMA use a logic an the statement lines or pos session-->
+   <!-- <record id="view_bank_statement_form_readonly" model="ir.ui.view">
         <field name="name">account.bank.statement.form</field>
         <field name="model">account.bank.statement</field>
         <field name="inherit_id" ref="account.view_bank_statement_form"/>
@@ -22,5 +23,5 @@
             </xpath>
 
         </field>
-    </record>
+    </record>-->
 </odoo>
