--- a/addons/account/views/account_journal_dashboard_view.xml
+++ b/addons/account/views/account_journal_dashboard_view.xml
@@ -68,12 +68,8 @@
                         <!-- For bank and cash -->
                         <div t-if="journal_type == 'bank' || journal_type == 'cash'" class="row">
                              <div class="col-4 o_kanban_card_manage_section o_kanban_manage_view">
-                                <div class="o_kanban_card_manage_title">
+                                <div id="card_action_view_menus" class="o_kanban_card_manage_title">
                                     <span role="separator">View</span>
-                                </div>
-                                <div id="action_card_statements">
-                                    <a t-if="journal_type == 'bank'" role="menuitem" type="object" name="open_action_with_context" context="{'action_name': 'action_bank_statement_tree', 'search_default_journal': True}">Statements</a>
-                                    <a t-if="journal_type == 'cash'" role="menuitem" type="object" name="open_action_with_context" context="{'action_name': 'action_view_bank_statement_tree', 'search_default_journal': True}">Statements</a>
                                 </div>
                                 <div>
                                     <a role="menuitem" type="object" name="open_collect_money">Cust. Payments</a>
@@ -94,9 +90,6 @@
                                     <span role="separator">New</span>
                                 </div>
                                 <div name="bank_cash_commands">
-                                    <t t-if="journal_type == 'bank'">
-                                        <a role="menuitem" type="object" name="create_bank_statement">Statement</a>
-                                    </t>
                                     <t t-if="journal_type == 'cash'">
                                         <a role="menuitem" type="object" name="create_cash_statement">Statement</a>
                                     </t>
@@ -258,11 +251,8 @@
                                     <a t-if="dashboard.number_to_reconcile > 0" name="action_configure_bank_journal" type="object" class="oe_inline" groups="account.group_account_invoice">Connect</a>
                                     <button t-if="dashboard.number_to_reconcile == 0" name="action_configure_bank_journal" type="object" class="btn btn-primary" groups="account.group_account_invoice">Connect</button>
                                 </t>
-                                <div name="bank_journal_cta" class="mt-3 mt-sm-0">
-                                    <div name="bank_statement_create_button" groups="account.group_account_invoice">
-                                        <a type="object" name="create_bank_statement" class="oe_inline">Create</a><span name="button_import_placeholder"/> Statements
-                                    </div>
-                                </div>
+                                <!--placeholder for import/sync addons-->
+                                <div name="bank_journal_cta" class="mt-3 mt-sm-0"/>
                             </t>
                             <t t-if="journal_type == 'cash'">
                                 <a t-if="dashboard.number_to_reconcile > 0" type="object" name="create_cash_statement" class="oe_inline" groups="account.group_account_invoice">New Transaction</a>
