[IMP] website_hr_recruitment: add pager and search to jobs website page
Before this commit the jobs list had no pager, and the search parameter
was neither used for filtering nor propagated to the rendering.

After this commit the jobs list supports pager (which must still be
added to the page template) and the search parameter is passed through
all layers.
The search itself is kept rudimentary because it will be replaced by the
general fuzzy search.

task-2406626

--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -35,12 +35,19 @@
                     <ul class="o_jobs_topbar_filters flex-md-nowrap nav pl-md-3"/>
                 </t>
                 <!-- Search bar -->
+                <t t-call="website.website_search_box_input">
+                    <t t-set="_classes" t-valuef="my-1"/>
+                    <t t-set="search_type" t-valuef="jobs"/>
+                    <t t-set="display_description" t-valuef="true"/>
+                </t>
+                <!-- Old search - on delete, also delete search_box
                 <div class="d-flex align-items-center justify-content-end w-md-100 w-lg-25 pl-lg-3 pr-0">
                     <t t-call="website_hr_recruitment.search_box">
                         <t t-set="_searches" t-value="searches"/>
                         <t t-set="_placeholder">Search a job...</t>
                     </t>
                 </div>
+                -->
             </div>
         </div>
     </nav>
