--- a/addons/account/views/account_bank_statement_views.xml
+++ b/addons/account/views/account_bank_statement_views.xml
@@ -74,6 +74,87 @@
             <field name="target">new</field>
         </record>
 
+        <record id="view_bank_statement_line_search" model="ir.ui.view">
+            <field name="name">account.bank.statement.line.search</field>
+            <field name="model">account.bank.statement.line</field>
+            <field name="arch" type="xml">
+                <search string="Search Bank Statements Line">
+                    <field name="payment_ref"/>
+                    <field name="statement_id"/>
+                    <field name="partner_id"/>
+                    <field name="date"/>
+                    <field name="journal_id" domain="[('type', 'in', ('bank', 'cash'))]" />
+                    <field name="narration" string="Notes"/>
+                    <field name="transaction_type"/>
+                    <field name="move_id"/>
+                    <field name="amount"/>
+                    <filter name="statement" string="Statement" context="{'group_by':'statement_id'}"/>
+                </search>
+            </field>
+        </record>
+
+        <record id="view_bank_statement_line_form" model="ir.ui.view">
+            <field name="name">bank.statement.line.form</field>
+            <field name="model">account.bank.statement.line</field>
+            <field name="priority">8</field>
+            <field name="arch" type="xml">
+                <form string="Statement Line" create="false">
+                    <sheet>
+                        <group col="4">
+                            <!-- Invisible fields -->
+                            <field name="state" invisible="1"/>
+                            <field name="company_id" invisible="1"/>
+
+                            <!-- Displayed fields -->
+                            <field name="statement_id" />
+                            <field name="date" />
+                            <field name="payment_ref" />
+                            <field name="ref" />
+                            <field name="partner_id" />
+                            <field name="amount" />
+                            <field name="narration" string="Notes" />
+                            <field name="transaction_type" />
+                            <field name="move_id" />
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        <record id="view_bank_statement_line_tree" model="ir.ui.view">
+            <field name="name">account.bank.statement.line.tree</field>
+            <field name="model">account.bank.statement.line</field>
+            <field name="priority">8</field>
+            <field name="arch" type="xml">
+                <tree string="Statement lines" create="false" default_order="date desc, statement_id desc, sequence desc, id desc">
+                    <!-- Invisible fields -->
+                    <field name="state" invisible="1"/>
+                    <field name="company_id" invisible="1"/>
+                    <field name="journal_id" invisible="1" />
+                    <field name="is_reconciled" invisible="1"/>
+                    <field name="partner_bank_id" invisible="1"/>
+                    <field name="currency_id" invisible="1"/>
+
+                    <!-- Displayed fields -->
+                    <field name="statement_id" optional="hide"/>
+                    <field name="move_id"/>
+                    <field name="date"/>
+                    <field name="payment_ref"/>
+                    <field name="partner_id"/>
+                    <field name="ref" groups="base.group_no_one" optional="hidden"/>
+                    <field name="narration" string="Notes" optional="hidden"/>
+                    <field name="transaction_type" optional="hidden"/>
+                    <field name="amount_currency" optional="hidden" groups="base.group_multi_currency"/>
+                    <field name="foreign_currency_id" optional="hidden" groups="base.group_multi_currency"/>
+                    <field name="amount"/>
+                    <field name="account_number" optional="hidden"/>
+
+                    <!-- Buttons -->
+                    <button name="button_undo_reconciliation" type="object"
+                            attrs="{'invisible': [('is_reconciled', '=', False)]}"
+                            string="Revert reconciliation" icon="fa-undo"/>
+                </tree>
+            </field>
+        </record>
         <record id="ir_cron_garbage_clean_statements" model="ir.cron">
             <field name="name">Remove empty old statements</field>
             <field name="model_id" ref="model_account_bank_statement"/>
